--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="delegate"
-                type="com.github.qingmei2.rhinevideoplayer.ui.login.LoginViewDelegate"/>
+                type="com.github.qingmei2.core.ui.login.LoginViewDelegate"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
